--- a/index.html
+++ b/index.html
@@ -468,6 +468,20 @@
             </li>
           </ul>
         </div>
+        <div class="subscribe">
+          <p class="subscribe-text">Subscribe</p>
+          <form class="subscribe-form">
+            <label class="input-label">
+              <input class="subscribe-email" type="email" placeholder="E-mail" name="subscribe-email">
+            </label>
+            <button class="subscribe-btn" type="submit">
+              Subscribe
+              <svg class="icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-send"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
     <!-- #endregion footer -->
