--- a/index.html
+++ b/index.html
@@ -444,25 +444,29 @@
           <ul class="social-list">
             <li class="social-item">
               <a class="social-link" href="">
-                <svg class="social-icon" width="24" height="24"><use href="./images/icons.svg#icon-instagram"></use>
+                <svg class="social-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="social-item">
               <a class="social-link" href="">
-                <svg class="social-icon" width="24" height="24"><use href="./images/icons.svg#icon-twitter"></use>
+                <svg class="social-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="social-item">
               <a class="social-link" href="">
-                <svg class="social-icon" width="24" height="24"><use href="./images/icons.svg#icon-facebook"></use>
+                <svg class="social-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="social-item">
               <a class="social-link" href="">
-                <svg class="social-icon" width="24" height="24"><use href="./images/icons.svg#icon-linkedin"></use>
+                <svg class="social-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
@@ -472,7 +476,12 @@
           <p class="subscribe-text">Subscribe</p>
           <form class="subscribe-form">
             <label class="input-label">
-              <input class="subscribe-email" type="email" placeholder="E-mail" name="subscribe-email">
+              <input
+                class="subscribe-email"
+                type="email"
+                placeholder="E-mail"
+                name="subscribe-email"
+              />
             </label>
             <button class="subscribe-btn" type="submit">
               Subscribe
@@ -485,5 +494,107 @@
       </div>
     </footer>
     <!-- #endregion footer -->
+    <!-- #region modal -->
+    <div class="modal-overlay is-open">
+      <div class="modal">
+        <button class="close-btn" type="button">
+          <svg class="icon close" width="8" height="8">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+        <p class="modal-title">Leave your contacts and we will call you back</p>
+        <form>
+          <div class="label-wrap">
+            <label class="modal-label" for="user-name">Name</label>
+            <div class="input-wrap">
+              <input
+                class="modal-input"
+                type="text"
+                name="user-name"
+                id="user-name"
+                autofocus
+                autocomplete="off"
+                required
+              />
+              <svg class="icon input" width="18" height="24">
+                <use href="./images/icons.svg#icon-user"></use>
+              </svg>
+            </div>
+          </div>
+
+          <div class="label-wrap">
+            <label class="modal-label" for="user-phone">Phone</label>
+            <div class="input-wrap">
+              <input
+                class="modal-input"
+                type="tel"
+                name="user-phone"
+                id="user-phone"
+                autocomplete="off"
+                required
+              />
+              <svg class="icon input" width="18" height="24">
+                <use href="./images/icons.svg#icon-phone"></use>
+              </svg>
+            </div>
+          </div>
+
+          <div class="label-wrap">
+            <label class="modal-label" for="user-email">Email</label>
+            <div class="input-wrap">
+              <input
+                class="modal-input"
+                type="email"
+                name="user-email"
+                id="user-email"
+                autocomplete="off"
+                required
+              />
+              <svg class="icon input" width="18" height="24">
+                <use href="./images/icons.svg#icon-email"></use>
+              </svg>
+            </div>
+          </div>
+
+          <div class="label-wrap comment">
+            <label class="modal-label" for="user-comment">Comment</label>
+            <textarea
+              name="user-comment"
+              class="modal-text"
+              placeholder="Text input"
+              rows="5"
+              id="user-comment"
+            ></textarea>
+          </div>
+
+          <div class="privacy-form">
+            <input
+              class="checkbox visually-hidden"
+              value="true"
+              type="checkbox"
+              id="user-privacy"
+              name="user-privacy"
+            />
+            <label class="label-privacy" for="user-privacy">
+              <span class="custom-checkbox-wrap">
+                <svg class="checkbox-icon" width="10" height="8">
+                  <use href="./images/icons.svg#icon-check"></use>
+                </svg>
+              </span>
+              I accept the terms and conditions of the
+              <a
+                href=""
+                class="privacy-link"
+                target="_blank"
+                rel="noopener noreferrer"
+                >Privacy Policy</a
+              >
+            </label>
+          </div>
+          <button class="submit-btn" type="submit">Send</button>
+        </form>
+      </div>
+    </div>
+    <!-- #endregion modal -->
   </body>
 </html>
